update configs for different clients

--- a/packages/ui-patterns/package.json
+++ b/packages/ui-patterns/package.json
@@ -623,6 +623,7 @@
     "framer-motion": "^11.1.9",
     "github-slugger": "^2.0.0",
     "icons": "workspace:*",
+    "js-yaml": "^3.14.1",
     "lodash": "^4.17.21",
     "lucide-react": "*",
     "mdast": "^3.0.0",
@@ -658,6 +659,7 @@
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.0.0",
     "@types/common-tags": "^1.8.4",
+    "@types/js-yaml": "^4.0.9",
     "@types/lodash": "^4.17.5",
     "@types/mdast": "^3.0.0",
     "@types/node": "catalog:",
