--- a/packages/ui-patterns/package.json
+++ b/packages/ui-patterns/package.json
@@ -611,6 +611,7 @@
     "@hookform/resolvers": "^3.1.1",
     "@monaco-editor/react": "^4.6.0",
     "@radix-ui/react-visually-hidden": "^1.1.3",
+    "@std/toml": "jsr:^1.0.11",
     "@supabase/sql-to-rest": "^0.1.6",
     "@supabase/supabase-js": "catalog:",
     "@vitest/coverage-v8": "^3.2.0",
